# init_sim

./: CMakeLists.txt  package.xml  readme.md
launch/: empty_world.launch  empty_world_complete.launch  launch_map_robots.launch  map02_turtlebot3.launch  map_02.launch  multiple_robots_01.launch
models/: TB3_model.urdf
models/cylinder1/: model.config  model.sdf  model2.sdf
models/ground_plane_model/: model.config  model.sdf
models/map_02/: model.config  model.sdf
models/map_02/meshes/: map_02.DAE
models/sun_model/: model.config  model.sdf
src/spawn_1_script/: initial_db.py  spawn_multiple_robots_1.py  spawn_robot.py  spawn_single_robot.py  spawn_single_robot_1.py
src/spawn_2_service/: initial_db.py  jsonObst.json  jsonRobots.json  spawn_cylinder.py  spawn_map.py  spawn_multiple_robots.py  spawn_obstacles.py  spawn_robot.py  spawn_single_robot.py
worlds/: empty_world.world  world_map_02.world
